package version update

--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,8 @@
 {
     "name": "pixelvide/laravel-sms-gateway",
     "description": "Pixelvide SMS Gateway",
+    "version": "1.0.0",
     "type": "package",
-    "scripts": {
-        "test:migrate": "phpunit --migrate-configuration",
-        "test": "phpunit"
-    },
-    "require": {
-        "php": "^7.3|^8.0",
-        "laravel/framework": "^7.0",
-        "aws/aws-sdk-php": "^3.184",
-        "ext-json": "*"
-    },
-    "require-dev": {
-        "orchestra/testbench": "^5"
-    },
     "license": "GPL-3.0-or-later",
     "authors": [
         {
@@ -22,6 +10,10 @@
             "email": "nitingoyal.dev@gmail.com"
         }
     ],
+    "scripts": {
+        "test:migrate": "phpunit --migrate-configuration",
+        "test": "phpunit"
+    },
     "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
@@ -32,5 +24,14 @@
         "psr-4": {
             "Pixelvide\\SMSGateway\\Test\\": "tests/"
         }
+    },
+    "require": {
+        "php": "^7.3|^8.0",
+        "laravel/framework": "^7.0",
+        "aws/aws-sdk-php": "^3.184",
+        "ext-json": "*"
+    },
+    "require-dev": {
+        "orchestra/testbench": "^5"
     }
 }
