--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "pixelvide/laravel-sms-gateway",
     "description": "Pixelvide SMS Gateway",
-    "version": "1.2.0",
+    "version": "2.0.0",
     "type": "package",
     "license": "GPL-3.0-or-later",
     "authors": [
@@ -27,7 +27,7 @@
     },
     "require": {
         "php": "^7.3|^8.0",
-        "laravel/framework": "^6.0|^7.0",
+        "laravel/framework": "^6.0|^7.0|^8.0|^9.0|^10.0",
         "aws/aws-sdk-php": "^3.184",
         "ext-json": "*"
     },
